Fix lazy-loaded images causing content jumps

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,8 +1,16 @@
 /* Normal font weight */
 @font-face {
   font-family: "Avenir Next";
-  src: url("/fonts/AvenirNext-DemiBold.ttf");
-  font-weight: normal;
+  src: url("/fonts/AvenirNext-Medium.woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* Semi-bold font weight */
+@font-face {
+  font-family: "Avenir Next";
+  src: url("/fonts/AvenirNext-DemiBold.woff2");
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -10,7 +18,7 @@
 @font-face {
   font-family: "Avenir Next";
   src: url("/fonts/AvenirNext-Bold.woff2");
-  font-weight: bold;
+  font-weight: 700;
   font-style: normal;
 }
 
@@ -26,6 +34,7 @@ html {
   padding: 0;
   line-height: 1.5;
   font-family: "Avenir Next", sans-serif;
+  scroll-behavior: smooth;
 }
 
 .primary {
